<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_dark"
        android:backgroundTint="?android:attr/textColorPrimary"
        tools:context=".AddCatActivity">

        <Button
            android:id="@+id/addCatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:backgroundTint="@color/colorLightBlue"
            android:onClick="onClick"
            android:text="@string/cat_submit"
            app:layout_constraintBottom_toTopOf="@+id/showCatsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/showCatsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0"
            android:backgroundTint="@color/colorBlue"
            android:onClick="onClick"
            android:text="Show cats"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="108dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/addCatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorAccent"
                android:ems="10"
                android:hint="@string/cat_name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etxtBreed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorAccent"
                android:ems="10"
                android:hint="@string/cat_breed"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etxtBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorAccent"
                android:ems="10"
                android:hint="@string/cat_date"
                android:inputType="date"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rbtnMale">

                <RadioButton
                    android:id="@+id/rbtnMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/cat_male"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/rbtnFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/cat_female"
                    android:textColor="@android:color/white" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/cboxMicrochipped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:buttonTint="@color/colorAccent"
                android:text="@string/cat_microchip"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>